Added Java settings section to Minecraft documentation.